fix (jessica-maxwel): align slider content

--- a/css/_jessica-maxwel-airport-transfers.sass
+++ b/css/_jessica-maxwel-airport-transfers.sass
@@ -109,49 +109,23 @@ main.jessica-maxwell
         position: relative
 
     .transportation .titles
-        position: absolute
-        bottom: -20%
-        left: 0
-        right: 0
-        z-index: 5
-        pointer-events: none
-        display: flex
-        justify-content: center
-        align-items: center
+        justify-content: flex-end 
+        margin-top: 20px
+
+        p, h1
+            background-color: $color-primary
+            color: $color-black
+            font-size: 30px
+            padding: 30px 60px
+            width: 100%
+            display: inline-block
+            width: calc(100% - 60px)
 
     .transportation .titles h1, .transportation .titles p
         background-color: $color-primary
         color: $color-black
         padding: 15px 40px
         font-size: 30px
-
-    @media screen and (max-width: 1000px)
-        .transportation .titles
-            bottom: -15%
-
-    @media screen and (max-width: 900px)
-        .transportation .titles
-            bottom: -10%
-        
-        .transportation .titles h1, .transportation .titles p
-            padding: 10px 30px
-            font-size: 25px
-
-    @media screen and (max-width: 700px)
-        .transportation .titles
-            bottom: -5%
-        
-        .transportation .titles h1, .transportation .titles p
-            padding: 8px 20px
-            font-size: 20px
-
-    @media screen and (max-width: 500px)
-        .transportation .titles
-            bottom: 0
-        
-        .transportation .titles h1, .transportation .titles p
-            padding: 5px 15px
-            font-size: 18px
 
     h2
         text-align: center
